--- a/css/style.css
+++ b/css/style.css
@@ -257,62 +257,6 @@ transition-duration: 250ms;
 transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-
-.backdrop {
-position: fixed;
-top: 0%;
-left: 0%;
-width: 100%;
-height: 100%;
-background-color: rgba(46, 47, 66, 0.4);
-transition-duration: 250ms;
-transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
-}
-
-.modal-btn {
-position: absolute;
-top: 50%;
-left: 50%;
-transform: translate(-50%, -50%);
-width: 408px;
-height: 576px;
-background-color: #FCFCFC;
-
-transition-property: background-color;
-transition-duration: 250ms;
-transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
-}
-
-.is-hidden {
-    opacity: 0;
-    pointer-events: none;
-}
-
-.button-hero-close {
-    position: absolute;
-    display: flex;
-    width: 24px;
-    height: 24px;
-    margin-left: 360px;
-    margin-top: 24px;
-    background-color: #FCFCFC;
-    border: 1px solid #E7E9FC;
-    border-radius: 50%;
-    cursor: pointer;
-    justify-content: center;
-    align-items: center;
-    transition-property: background-color, border, fill;
-    transition-duration: 250ms;
-    transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
-}
-
-
-.button-hero-close:hover {
-    fill: #FFFFFF;
-    border: 1px solid #404BBF;
-     background-color: #404BBF;
-}
-
 .button-hero:hover,
 .button-hero:focus {
     border: 1px solid var(--text-hover-focus-color);
@@ -766,18 +710,163 @@ color: var(--secondari-text-color);
 
 
 
+/*--------FORM--------*/
+
+
+.backdrop {
+    position: fixed;
+    top: 0%;
+    left: 0%;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(46, 47, 66, 0.4);
+    transition-duration: 250ms;
+    transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+    }
+    
+    .modal-btn {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    width: 408px;
+    height: 576px;
+    background-color: #FCFCFC;
+    
+    transition-property: background-color;
+    transition-duration: 250ms;
+    transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+    }
+    
+    .is-hidden {
+        opacity: 0;
+        pointer-events: none;
+    }
+    
+    .button-hero-close {
+        position: absolute;
+        display: flex;
+        width: 24px;
+        height: 24px;
+        margin-left: 360px;
+        margin-top: 24px;
+        background-color: #FCFCFC;
+        border: 1px solid #E7E9FC;
+        border-radius: 50%;
+        cursor: pointer;
+        justify-content: center;
+        align-items: center;
+        transition-property: background-color, border, fill;
+        transition-duration: 250ms;
+        transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+    }
+    
+    
+    .button-hero-close:hover {
+        fill: #FFFFFF;
+        border: 1px solid #404BBF;
+         background-color: #404BBF;
+    }
+
+
 .form {
     margin-top: 72px;
     margin-bottom: 24px;
-    margin-left: auto;
-    margin-right: auto;
-    width: 360px;
-    height: 408px;
+    padding-left: 24px;
+    padding-right: 24px;
 }
+
+.form-text {
+    display: flex;
+    justify-content: center;
+}
+
+.text-form {
+font-weight: 500;
+font-size: 16px;
+line-height: 1.5;
+color: #2E2F42;
+margin-bottom: 14px;
+letter-spacing: 0.02em;
+}
+
+.form-pitch input {
+    padding: 11px 16px;
+    border: 1px solid rgba(33, 33, 33, 0.2);
+    border-radius: 4px;
+}
+
+
 
 .form-pitch {
     display: flex;
     flex-direction: column;
-    margin-top: 14px;
+    margin-bottom: 8px;
 }
+
+label[for="tel"],
+label[for="name"],
+label[for="mail"],
+label[for="coment"] {
+    font-weight: 400;
+    font-size: 12px;
+    line-height: 1.16;
+    color: #8E8F99;
+    letter-spacing: 0.01em;
+}
+
+.checkbox {
+    display: flex;
+    align-items: center;
+}
+
+.checkbox input[type="checkbox"] {
+    margin-right: 8px;
+}
+
+textarea {
+    width: 360px;
+    height: 120px;
+    border: 1px solid rgba(33, 33, 33, 0.2);
+    border-radius: 4px;
+    resize: none;
+    padding: 8px 16px;
+
+}
+
+.checkbox label {
+    font-weight: 400;
+    font-size: 12px;
+    line-height: 1.3;
+}
+
+.button-form-send {
+    display: flex;
+    justify-content: center;
+    margin-top: 24px;
+    margin-bottom: 24px;
+}
+
+.button-form {
+    font-weight: 500;
+    font-size: 16px;
+    line-height: 1.5;
+    color: #FFFFFF;
+    background-color: #4D5AE5;
+
+    width: 169px;
+    height: 56px;
+    border: 1px solid #4D5AE5;
+    border-radius: 4px;
+    padding: 16px 32px;
+    box-shadow: 0px 4px 4px rgb(0 0 0 / 15%);
+
+}
+
+.button-form:hover,
+.button-form:focus {
+    background: #404BBF;
+box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
+}
+
 
