--- a/css/style.css
+++ b/css/style.css
@@ -561,6 +561,7 @@ margin-bottom: 16px;
     border: 1px solid rgba(255, 255, 255, 0.3);
     border-radius: 4px;
 
+    width: 264px;
     height: 40px;
     margin-top: 16px;
     padding: 8px 16px;
@@ -582,6 +583,11 @@ margin-bottom: 16px;
     border-radius: 4px;
     margin-left: 24px;
     padding: 8px 24px;
+    cursor: pointer;
+
+   transition-property: background-color;
+   transition-duration: 250ms;
+   transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .button-subscribe-footer:hover,
