--- a/css/style.css
+++ b/css/style.css
@@ -935,7 +935,14 @@ textarea {
 
 
 .checkbox {
-    appearance: none;
+   position: absolute;
+   width: 1px;
+   height: 1px;
+   margin: -1px;
+   border: 0;
+   padding: 0;
+   clip: rect(0 0 0 0);
+   overflow: hidden;
 }
 
 .border-checkbox {
