--- a/css/style.css
+++ b/css/style.css
@@ -33,7 +33,7 @@ ul {
     width: 1158px;
 }
 
-.button-container, .header-container, .nav-list, .adress-list, .main-list, .button-list, .images-list, .photos-list, .team-list, .icon-item, .team-list-icons, .team-icon  {
+.button-container, .header-container, .nav-list, .adress-list, .main-list, .button-list, .images-list, .photos-list, .team-list, .icon-item, .team-list-icons, .team-icon, .subscribe  {
     display: flex;
 }
 
@@ -579,9 +579,10 @@ margin-bottom: 16px;
 }
 
 .button-subscribe-footer {
-    display: inline-flex;
+    display: flex;
     align-items: center;
     width: 165px;
+    height: 40px;
     font-weight: 500;
     font-size: 16px;
     line-height: 1.5;
@@ -589,15 +590,14 @@ margin-bottom: 16px;
     color: #FFFFFF;
     border: 1px solid #4D5AE5;
     background-color: #4D5AE5;
-    
     border-radius: 4px;
+    margin-top: 40px;
     margin-left: 24px;
     padding: 8px 24px;
     cursor: pointer;
-
-   transition-property: background-color;
-   transition-duration: 250ms;
-   transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+    transition-property: background-color;
+    transition-duration: 250ms;
+    transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .button-subscribe-footer:hover,
