--- a/css/style.css
+++ b/css/style.css
@@ -216,7 +216,8 @@ transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
 background-image: linear-gradient( rgba(46, 47, 66, 0.7), rgba(46, 47, 66, 0.7)), url(../images/backround-hero.jpg);
 background-size: cover;
 background-repeat: no-repeat;
-min-width: 1440px;
+width: 1440px;
+margin: 0 auto;
 padding-top: 190px;
 padding-bottom: 190px;
 
